<resources>

    //fragmentOne
    <string name="RESULTS_TABLE">RESULTS TABLE</string>
    <string name="RESULTS_TABLE_Easy">Easy</string>
    <string name="RESULTS_TABLE_Normal">Normal</string>
    <string name="RESULTS_TABLE_Hard">Hard</string>

    //activityMain
    <string name="app_name">Color Memory Game</string>
    <string name="First_name">Name</string>
    <string name="Age">Age</string>
    <string name="Next">"S T A R T !"</string>


    //secendActivity
    <string name="Easy">Easy\n2X2</string>
    <string name="Normal">Normal\n4x4</string>
    <string name="Hard">Hard\n6X6</string>
    <string name="title_activity_result_table">RecordTableActivity</string>


    <string name="highest_scores">Highessdsdt Scores</string>


    //maps
    <string name="google_maps_API_key">AIzaSyCIIC9YoreJvegJNlZmW0bU9JgtultuYHM</string>

</resources>
